--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-native-picker/picker": "^2.11.4",
-    "@sentry/react": "^10.39.0",
+    "@sentry/react": "^10.40.0",
     "@visx/gradient": "^3.12.0",
     "@visx/responsive": "^3.12.0",
     "@visx/xychart": "^3.12.0",
     "crypto-js": "^4.2.0",
     "es-toolkit": "^1.44.0",
-    "expo": "55.0.0-preview.12",
+    "expo": "55.0.2",
     "expo-font": "^55.0.4",
     "next": "^16.1.6",
     "node-emoji": "^2.2.0",
@@ -43,7 +43,7 @@
     "react-dom": "19.2.4",
     "react-easy-linkify": "^1.0.8",
     "react-native": "0.84.0",
-    "react-native-safe-area-context": "^5.6.2",
+    "react-native-safe-area-context": "^5.7.0",
     "react-native-svg": "^15.15.3",
     "react-native-web": "^0.21.2",
     "react-shiki": "^0.9.1",
@@ -74,7 +74,7 @@
     "next-images": "^1.8.5",
     "oxfmt": "^0.35.0",
     "oxlint": "^1.50.0",
-    "oxlint-tsgolint": "^0.14.2",
+    "oxlint-tsgolint": "^0.15.0",
     "simple-git-hooks": "^2.13.1",
     "typescript": "^5.9.3",
     "user-agent-data-types": "^0.4.2"
